k8s/talos/apps/audiobookshelf/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  annotations:
    volsync.backube/privileged-movers: "true"
