k8s/talos/apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - hyper1
      securityContext:
        fsGroup: 1000
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.33.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: share
              mountPath: /audiobooks
              subPath: media/audiobooks
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
          resources: {}
      volumes:
        - name: share
          nfs:
            server: nas.local.bigd.no
            path: /volume1/shared-data
            readOnly: false
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: metadata
          persistentVolumeClaim:
            claimName: metadata-pvc
